--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-#api
-src/api
-
 # dependencies
 /node_modules
 /.pnp
@@ -16,6 +13,7 @@ src/api
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
